; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_uri_cache_remove.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_uri_cache_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@URI_CACHE = common dso_local global %struct.TYPE_2__** null, align 8
@uri_off = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @uri_cache_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uri_cache_remove(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @compute_uri_cache_slot(i8* %4)
  store i32 %5, i32* %3, align 4
  %6 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @URI_CACHE, align 8
  %7 = load i32, i32* %3, align 4
  %8 = zext i32 %7 to i64
  %9 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %6, i64 %8
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = icmp ne %struct.TYPE_2__* %10, null
  br i1 %11, label %12, label %30

12:                                               ; preds = %1
  %13 = load i8*, i8** %2, align 8
  %14 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @URI_CACHE, align 8
  %15 = load i32, i32* %3, align 4
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %14, i64 %16
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i64, i64* @uri_off, align 8
  %22 = getelementptr inbounds i32, i32* %20, i64 %21
  %23 = call i32 @strcmp(i8* %13, i32* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %30, label %25

25:                                               ; preds = %12
  %26 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @URI_CACHE, align 8
  %27 = load i32, i32* %3, align 4
  %28 = zext i32 %27 to i64
  %29 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %26, i64 %28
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %29, align 8
  br label %30

30:                                               ; preds = %25, %12, %1
  ret void
}

declare dso_local i32 @compute_uri_cache_slot(i8*) #1

declare dso_local i32 @strcmp(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
